--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 </head>
 <body>
     <header>
-        <figure id="top">
-            <a href="#"><img src="image/twelve.png" alt="Logo" width="241" height="118" loading="eager"></a>
-        </figure>
         <div class="menu">
             <!-- <span class="material-symbols-outlined">drag_handle</span> -->
             <span class="imgblock menubar"><i class="fa-solid fa-bars"></i></span></div>
@@ -28,12 +25,11 @@
             <li><span><i class="fa-solid fa-circle-check"></i></span>Twelve Consulting</li>
             <li><span><i class="fa-solid fa-circle-check"></i></span><a href="https://twelvevest.com/" target="_blank">Twelvevest</a></li>         
         </ul>
-      
     </section>
 
-    <div class="middle">
-        <h1>CRE</h1>
-    </div>
+    <figure class="middle">
+        <img src="image/twelve.jpg" alt="Logo" width="1600" height="1600">
+    </figure>
     <p class="unique">We invest in visionary founders building category-defining tech companies that are levered to Africa.</p>
     <p class="plinks"><a href="" target="_blank">Select companies</a> &nbsp; <a href="" target="_blank">News</a></p>
     <div class="social">
@@ -43,7 +39,7 @@
 </main>
 
 <footer>
-    <p class="copy">&copy; CRE Capital Inc 2024. All rights Reserved</p>
+    <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
     <p><a href="" target="_blank">Terms of Use</a></p>
     <p>Complaints: <a href="" target="_blank">complaints@cre.vc</a></p>
     <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
