--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main class="container">
     <section class="update">
-        <h2>A private investment and advisory company</h2>
+        <p>A private investment and advisory company</p>
         <ul>
             <li><span><i class="fa-solid fa-circle-check"></i></span>Twelve Advisory</li>
             <li><span><i class="fa-solid fa-circle-check"></i></span>Twelve Consulting</li>
