added white papers links and contents

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img src="image/twelve.jpg" alt="Logo" width="1600" height="1600">
     </figure>
     <p class="unique">We invest in visionary founders building category-defining tech companies that are levered to Africa.</p>
-    <p class="plinks"><a href="" target="_blank">Select companies</a> &nbsp; <a href="" target="_blank">News</a></p>
+    <p class="plinks"><a href="white_papers.html" target="_blank">White papers</a> &nbsp; <a href="" target="_blank">News</a></p>
     <div class="social">
         <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
         <span><a href="https://www.linkedin.com/company/twelve-group-llc/"><i class="fa-brands fa-linkedin-in"></i></a></span>
@@ -41,7 +41,7 @@
 <footer>
     <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
     <p><a href="" target="_blank">Terms of Use</a></p>
-    <p>Complaints: <a href="" target="_blank">complaints@cre.vc</a></p>
+    <p>Complaints: <a href="mailto: info@twelvest.com" target="_blank">info@twelvest.com</a></p>
     <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
 </footer> 
 </body>
