implement blue ticks correction

--- a/index.html
+++ b/index.html
@@ -12,37 +12,38 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
     <header>
         <div class="menu">
             <!-- <span class="material-symbols-outlined">drag_handle</span> -->
             <span class="imgblock menubar"><i class="fa-solid fa-bars"></i></span></div>
     </header>
+
     <main class="container">
-    <section class="update">
-        <p>A private investment and advisory company</p>
-        <ul>
-            <li><span><i class="fa-solid fa-circle-check"></i></span>Twelve Advisory</li>
-            <li><span><i class="fa-solid fa-circle-check"></i></span>Twelve Consulting</li>
-            <li><span><i class="fa-solid fa-circle-check"></i></span><a href="https://twelvevest.com/" target="_blank">Twelvevest</a></li>         
-        </ul>
-    </section>
+        <section class="update">
+            <p>A private investment and advisory company</p>
+            <ul>
+                <li id="small1">Advisory</li> <!--<span><i class="fa-solid fa-circle-check"></i></span>-->
+                <li id="small2">Consulting</li>
+                <li id="small3"><a href="https://twelvevest.com/" target="_blank">Private Investments</a></li>
+            </ul>
+        </section>
+    
+        <figure class="middle">
+            <img src="image/twelve.jpg" alt="Logo" width="1600" height="1600">
+        </figure>
+        <!-- <p class="unique">We invest in visionary founders building category-defining tech companies that are levered to Africa.</p> -->
+        <p class="plinks"><a href="white_papers.html">White papers</a></p>
+        <div class="social">
+            <span><a href="https://www.linkedin.com/company/twelve-group-llc/"><i class="fa-brands fa-linkedin-in"></i></a></span>
+        </div>
+    </main>
 
-    <figure class="middle">
-        <img src="image/twelve.jpg" alt="Logo" width="1600" height="1600">
-    </figure>
-    <p class="unique">We invest in visionary founders building category-defining tech companies that are levered to Africa.</p>
-    <p class="plinks"><a href="white_papers.html">White papers</a> &nbsp; <a href="" target="_blank">News</a></p>
-    <div class="social">
-        <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
-        <span><a href="https://www.linkedin.com/company/twelve-group-llc/"><i class="fa-brands fa-linkedin-in"></i></a></span>
-    </div>
-</main>
-
-<footer>
-    <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
-    <p><a href="" target="_blank">Terms of Use</a></p>
-    <p>Complaints: <a href="mailto: info@twelvest.com" target="_blank">info@twelvest.com</a></p>
-    <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
-</footer> 
+    <footer>
+        <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
+        <p><a href="" target="_blank">Terms of Use</a></p>
+        <p>Complaints: <a href="mailto: info@twelvest.com" target="_blank">info@twelvest.com</a></p>
+        <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
+    </footer> 
 </body>
 </html>
