--- a/white_papers.html
+++ b/white_papers.html
@@ -15,7 +15,7 @@
     <main>
         <header>
             <figure>
-                <img src="image/twelved.jpg" width="949" height="949" alt="Logo" style="display: block;">
+                <img src="image/twelvenew.jpg" width="806" height="620" alt="Logo" style="display: block;">
             </figure>
         </header>
         <section class="whitepapers">
@@ -40,6 +40,7 @@
             </div>
         </section>
     </main>
+
     <!-- footer -->
     <footer>
         <div class="social">
