Changed email to support@

--- a/white_papers.html
+++ b/white_papers.html
@@ -15,7 +15,7 @@
     <main>
         <header>
             <figure>
-                <img src="image/twelvenew.jpg" width="806" height="620" alt="Logo" style="display: block;">
+                <a href="index.html"><img src="image/twelvenew.jpg" width="806" height="620" alt="Logo" style="display: block;"></a>
             </figure>
         </header>
         <section class="whitepapers">
