--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <footer>
         <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
         <p><a href="referenceterms.html" target="_self">Terms of Use</a></p>
-        <p>Complaints: <a href="mailto: info@twelvest.com" target="_blank">info@twelvest.com</a></p>
+        <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">info@twelvest.com</a></p>
         <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
     </footer> 
 </body>
