--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
     
         <figure class="middle">
-            <img src="image/twelvenew.jpg" alt="Logo" width="806" height="620">
+            <img src="image/twelved.jpg" alt="Logo" width="949" height="949">
         </figure>
         <!-- <p class="unique">We invest in visionary founders building category-defining tech companies that are levered to Africa.</p> -->
         <p class="plinks"><a href="white_papers.html">White papers</a></p>
@@ -42,7 +42,7 @@
     <footer>
         <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
         <p><a href="referenceterms.html" target="_self">Terms of Use</a></p>
-        <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">info@twelvest.com</a></p>
+        <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">support@twelvevest.com</a></p>
         <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
     </footer> 
 </body>
