--- a/white_papers.html
+++ b/white_papers.html
@@ -21,35 +21,22 @@
         <section class="whitepapers">
             <p class="paper">White Papers</p>
             <div class="companies">
-                <p><a href=""><img src="./image/AndelaPrimaryLogo.png" alt="Andela_Logo" width="300" height="93"></a></p>
-                <p><a href=""><img src="./image/Carryfirst-logo.png" alt="Carryfirst_logo"nwidth="300" height="75"></a></p>
-                <p><a href=""><img src="./image/definelylogo.png" alt="definely_logo" width="300" height="76"></a></p>
-                <p><a href=""><img src="./image/flextocklogo.png" alt="flextock_logo" width="300" height="73"></a></p>
-                <p><a href=""><img src="./image/flowlivinglogo.jpg" alt="flowliving_logo" width="300" height="78"></a></p>
-                <p><a href=""><img src="./image/flutterwavelogo.png" alt="flutterwave_logo" width="300" height="71"></a></p>
-                <p><a href=""><img src="./image/lifecheqlogo.png" alt="lifecheqlogo" width="175" height="45"></a></p>
-                <p><a href=""><img src="./image/lynklogo.jpg" alt="lynk_logo" width="300" height="82"></a></p>
-                <p><a href=""><img src="./image/MattaLogo.jpg" alt="Matta_Logo" width="196" height="72"></a></p>
-                <p><a href=""><img src="./image/oradianlogo.png" alt="oradian_logo" width="300" height="99"></a></p>
-                <p><a href=""><img src="./image/Sabilogo.jpg" alt="Sabi_logo" width="300" height="78"></a></p>
-                <p><a href=""><img src="./image/SmileIdentitylogo.jpg" alt="SmileIdentity_logo" width="300" height="77"></a></p>
-                <p><a href=""><img src="./image/StitchLogo.jpg" alt="Stitch_Logo" width="300" height="56"></a></p>
-                <p><a href=""><img src="./image/Sukhibalogo.jpeg" alt="Sukhiba_logo" width="200" height="71"></a></p>
-                <p><a href=""><img src="./image/sweepsouthlogo.png" alt="sweepsouth_logo" width="300" height="77"></a></p>
-                <p><a href=""><img src="./image/yogologo.jpg" alt="yogo_logo" width="300" height="94"></a></p>
-            </div>
+                <p><a href=""><img src="./image/whitep1.png" alt="Collaborative_logo" width="300" height="100"></a></p>
+                <p><a href=""><img src="./image/whitep2.png" alt="Missing_piece_logo"nwidth="300" height="100"></a></p>
+                <p><a href=""><img src="./image/whitep3.png" alt="Next_generation_logo" width="300" height="100"></a></p>
+                <p><a href=""><img src="./image/whitep4.png" alt="Lessons_logo" width="300" height="100"></a></p>
+                </div>
         </section>
     </main>
 
     <!-- footer -->
     <footer>
         <div class="social">
-            <span><a href="#"><i class="fa-brands fa-twitter"></i></a></span>
             <span><a href="https://www.linkedin.com/company/twelve-group-llc/"><i class="fa-brands fa-linkedin-in"></i></a></span>
         </div>
         <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
         <p><a href="" target="_blank">Terms of Use</a></p>
-        <p>Complaints: <a href="mailto: info@twelvest.com" target="_blank">info@twelvest.com</a></p>
+        <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">support@twelvevest.com</a></p>
         <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
     </footer> 
 </body>
