Terms of use to service

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <footer>
         <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
-        <p><a href="referenceterms.html" target="_self">Terms of Use</a></p>
+        <p><a href="referenceterms.html" target="_self">Terms of Service</a></p>
         <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">support@twelvevest.com</a></p>
         <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
     </footer> 
