--- a/white_papers.html
+++ b/white_papers.html
@@ -35,7 +35,7 @@
             <span><a href="https://www.linkedin.com/company/twelve-group-llc/"><i class="fa-brands fa-linkedin-in"></i></a></span>
         </div>
         <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
-        <p><a href="" target="_blank">Terms of Use</a></p>
+        <p><a href="" target="_blank">Terms of Service</a></p>
         <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">support@twelvevest.com</a></p>
         <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
     </footer> 
