worked of refrence page FS

--- a/referenceterms.html
+++ b/referenceterms.html
@@ -27,7 +27,7 @@
         <h4>Acceptance of Terms</h4>
 
         <p>
-            The website and all information provided or stated on this webiste in any form of media such as text,
+            The website and all information provided or stated on this website in any form of media such as text,
             photos, audio, video, or other materials and information on or through the Site ,is offered subject to
             acceptance of all the terms and conditions contained in these Terms and all other operating rules, policies
             and procedures that may be published on the Site by the Company, which are incorporated by reference,
