Modified link images

--- a/referenceterms.html
+++ b/referenceterms.html
@@ -17,7 +17,7 @@
             using this Site, you acknowledge and agree that you have read and agree to these Terms.
         </p>
 
-        <p>This Site is owned and controlled by Twelve Advisory ltd (“Twelve ” or “we” or “us” or “our”). We may update
+        <p>This Site is owned and controlled by Twelve Advisory Ltd. (“Twelve ” or “we” or “us” or “our”). We may update
             these Terms from time to time and any modifications will be effective immediately upon posting unless we
             indicate otherwise. By using the Site after any changes to the Terms have been posted, you are agreeing to
             the most recent version of these Terms. We suggest that you review these Terms periodically for changes. If
