--- a/white_papers.html
+++ b/white_papers.html
@@ -21,10 +21,10 @@
         <section class="whitepapers">
             <p class="paper">White Papers</p>
             <div class="companies">
-                <p><a href=""><img src="./image/whitep1.png" alt="Collaborative_logo" width="300" height="100"></a></p>
-                <p><a href=""><img src="./image/whitep2.png" alt="Missing_piece_logo"nwidth="300" height="100"></a></p>
-                <p><a href=""><img src="./image/whitep3.png" alt="Next_generation_logo" width="300" height="100"></a></p>
-                <p><a href=""><img src="./image/whitep4.png" alt="Lessons_logo" width="300" height="100"></a></p>
+                <p><a href=""><img src="./image/firstone.png" alt="Collaborative_logo" width="500" height="200"></a></p>
+                <p><a href=""><img src="./image/secondone.png" alt="Missing_piece_logo"nwidth="500" height="200"></a></p>
+                <p><a href=""><img src="./image/thirdone.png" alt="Next_generation_logo" width="500" height="200"></a></p>
+                <p><a href=""><img src="./image/lastone.png" alt="Lessons_logo" width="500" height="200"></a></p>
                 </div>
         </section>
     </main>
@@ -35,7 +35,7 @@
             <span><a href="https://www.linkedin.com/company/twelve-group-llc/"><i class="fa-brands fa-linkedin-in"></i></a></span>
         </div>
         <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
-        <p><a href="" target="_blank">Terms of Service</a></p>
+        <p><a href="referenceterms.html" target="_self">Terms of Service</a></p>
         <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">support@twelvevest.com</a></p>
         <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
     </footer> 
