attached most recent images

--- a/white_papers.html
+++ b/white_papers.html
@@ -21,10 +21,10 @@
         <section class="whitepapers">
             <p class="paper">White Papers</p>
             <div class="companies">
-                <p><a href=""><img src="./image/firstone.png" alt="Collaborative_logo" width="500" height="200"></a></p>
-                <p><a href=""><img src="./image/secondone.png" alt="Missing_piece_logo"nwidth="500" height="200"></a></p>
-                <p><a href=""><img src="./image/thirdone.png" alt="Next_generation_logo" width="500" height="200"></a></p>
-                <p><a href=""><img src="./image/lastone.png" alt="Lessons_logo" width="500" height="200"></a></p>
+                <figure><a href=""><img src="./image/collaborativeCapital.png" alt="Collaborative_logo" width="700" height="300"></a></figure>
+                <figure><a href=""><img src="./image/theMissing.png" alt="Missing_piece_logo"nwidth="700" height="300"></a></figure>
+                <figure><a href=""><img src="./image/nextGen.png" alt="Next_generation_logo" width="700" height="300"></a></figure>
+                <figure><a href=""><img src="./image/lessonsLearned.png" alt="Lessons_logo" width="700" height="300"></a></figure>
                 </div>
         </section>
     </main>
