--- a/index.html
+++ b/index.html
@@ -1,49 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Twelve</title>
-    
-    <!-- icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="icon" href="image/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="main.css">
-</head>
-<body>
 
+    <!-- icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link rel="icon" href="image/favicon.png" type="image/x-icon" />
+    <link rel="stylesheet" href="main.css" />
+  </head>
+  <body>
     <header>
-        <div class="menu">
-            <!-- <span class="material-symbols-outlined">drag_handle</span> -->
-            <span class="imgblock menubar"><i class="fa-solid fa-bars"></i></span></div>
+      <div class="menu">
+        <span class="imgblock menubar"><i class="fa-solid fa-bars"></i></span>
+      </div>
     </header>
 
     <main class="container">
-        <section class="update">
-            <p>A private investment and advisory company</p>
-            <ul>
-                <li id="small1">Advisory</li> <!--<span><i class="fa-solid fa-circle-check"></i></span>-->
-                <li id="small2">Consulting</li>
-                <li id="small3"><a href="https://twelvevest.com/" target="_blank">Private Investments</a></li>
-            </ul>
-        </section>
-    
-        <figure class="middle">
-            <img src="image/twelved.jpg" alt="Logo" width="949" height="949">
-        </figure>
-        <!-- <p class="unique">We invest in visionary founders building category-defining tech companies that are levered to Africa.</p> -->
-        <p class="plinks"><a href="white_papers.html">White papers</a></p>
-        <div class="social">
-            <span><a href="https://www.linkedin.com/company/twelve-group-llc/"><i class="fa-brands fa-linkedin-in"></i></a></span>
-        </div>
+      <section class="update">
+        <p>A private investment and advisory company</p>
+        <ul>
+          <li id="small1">Advisory</li>
+          <li id="small2">Consulting</li>
+          <li id="small3">
+            <a href="https://twelvevest.com/" target="_blank"
+              >Private Investments</a
+            >
+          </li>
+        </ul>
+      </section>
+
+      <figure class="middle">
+        <img src="image/twelved.jpg" alt="Logo" width="949" height="949" />
+      </figure>
+      <p class="plinks"><a href="white_papers.html">White papers</a></p>
+      <div class="social">
+        <span
+          ><a href="https://www.linkedin.com/company/twelve-group-llc/"
+            ><i class="fa-brands fa-linkedin-in"></i></a
+        ></span>
+      </div>
     </main>
 
     <footer>
-        <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
-        <p><a href="referenceterms.html" target="_self">Terms of Service</a></p>
-        <p>Contact Us: <a href="mailto: support@twelvevest.com" target="_blank">support@twelvevest.com</a></p>
-        <p class="bttop"><a href="#top"><i class="fa-solid fa-right-long"></i></a></p>
-    </footer> 
-</body>
+      <p class="copy">&copy; Twelve 2024. All rights Reserved</p>
+      <p><a href="referenceterms.html" target="_self">Terms of Service</a></p>
+      <p>
+        Contact Us:
+        <a href="mailto: support@twelvevest.com" target="_blank"
+          >support@twelvevest.com</a
+        >
+      </p>
+      <p class="bttop">
+        <a href="#top"><i class="fa-solid fa-right-long"></i></a>
+      </p>
+    </footer>
+  </body>
 </html>
