mobile view refined

--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
               >Private Investments</a
             >
           </li>
+          <li id="small4">
+            <a
+              href="https://thetgiclub.com/
+            "
+              target="_blank"
+              >Community</a
+            >
+          </li>
+          <li id="small5">
+            <a href="https://www.biyalearn.com/" target="_blank">Education</a>
+          </li>
         </ul>
       </section>
 
