implemented changes required all ul straight

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <li id="small2">Consulting</li>
           <li id="small3">
             <a href="https://twelvevest.com/" target="_blank"
-              >Private Investments</a
+              ><span class="white-space">Private Investments</span></a
             >
           </li>
           <li id="small4">
